5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1590_2895.log
== TEST (2019-03-20 15:43:14) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("o valor de unitario de cada jogo?"))
frt = float(intup("o valor do frete?"))
total = quant + ( var * frt )
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    frt = float(intup("o valor do frete?"))
NameError: name 'intup' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:44:18) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("o valor de unitario de cada jogo?"))
frt = float(input("o valor do frete?"))
total = (quant * var) + frt 
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:44:32) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("o valor de unitario de cada jogo?"))
frt = float(input("o valor do frete?"))
total = (quant * var) + frt 
print(total)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:44:47) 
-- CODE:
quant = float(input("A quantidade de jogos a serem encomendados?"))
var = float(input("o valor de unitario de cada jogo?"))
frt = float(input("o valor do frete?"))
total = (quant * var) + frt 
print(total)
-- EXECUTION TIME:
0.225042
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
